xrootd4j: Update to canl 2.1.1 and bc 1.50

--- a/xrootd4j-gsi/pom.xml
+++ b/xrootd4j-gsi/pom.xml
@@ -51,6 +51,10 @@
         <artifactId>canl</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+    </dependency>
+    <dependency>
         <groupId>org.dcache</groupId>
         <artifactId>xrootd4j</artifactId>
     </dependency>
