--- a/pom.xml
+++ b/pom.xml
@@ -166,7 +166,12 @@
       <dependency>
           <groupId>eu.eu-emi.security</groupId>
           <artifactId>canl</artifactId>
-          <version>1.3.3</version>
+          <version>2.1.1</version>
+      </dependency>
+      <dependency>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk15on</artifactId>
+          <version>1.50</version>
       </dependency>
       <dependency>
           <groupId>org.dcache</groupId>
